# example-standalone-inferencing-pico

./: .gitignore  CMakeLists.txt  README.md  test_data.h
source/: README.txt  ei_classifier_porting.cpp  main.cpp
source/edge-impulse-sdk/classifier/: ei_fill_result_struct.h  ei_model_types.h  ei_run_classifier.h  ei_run_dsp.h
source/edge-impulse-sdk/dsp/: numpy.hpp
source/edge-impulse-sdk/dsp/spectral/: feature.hpp  wavelet.hpp
source/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
source/tflite-model/: tflite-trained.h  trained_model_compiled.cpp  trained_model_compiled.h
